# equitiestradingbot

./: .gitignore  README.md  pyproject.toml  test_platform_integration.py
.claude/: launch.json
config/: live_trading_bot.toml  server_trading_bot.toml  trading_bot.toml
config/credentials/: live_credentials.json  telegrambot_credentials.json
config/telegram/: signal_history.json
data/: epics_ids.txt  instrument_universe.json
equitiestradingbot/: __init__.py  __main__.py  tradingbot.py
equitiestradingbot/Components/: Backtester.py  Configuration.py  MarketProvider.py  Utils.py  __init__.py  market_provider.py  time_provider.py
equitiestradingbot/Components/Broker/: Broker.py  __init__.py  abstract_interfaces.py  av_interface.py  factories.py  ig_interface.py  (+1 more)
equitiestradingbot/Interfaces/: Market.py  Position.py  __init__.py  market_history.py  market_macd.py
equitiestradingbot/Strategies/: __init__.py  advanced_momentum_strategy.py  base.py  factories.py  intraday_gold_strategy.py  signal_confidence.py  simple_bollinger_bands.py  simple_macd.py  simplicity.py  smart_sentiment_strategy.py  strategy_manager.py  weighted_avg_peak.py
equitiestradingbot/agent/: __init__.py
log/: log_setup.py
test/: test_broker.py  test_configuration.py  test_ig_interface.py  test_market_provider.py  test_simple_boll_bands.py  test_simple_macd.py  test_strategy_factor.py  test_time_provider.py  test_trading_bot.py  test_utils.py  test_weighted_avg_peak.py
test/common/: MockRequests.py
test/test_data/: credential.json  demo_trading_bot.toml  epics_list.txt
(+29 files in other folders)
